cmake_minimum_required (VERSION 3.5)

include (ExternalProject)

set (CAF_EXTERNAL_PROJECT caf-git)
set (CAF_SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/${CAF_EXTERNAL_PROJECT}-prefix/src/${CAF_EXTERNAL_PROJECT})

ExternalProject_Add (${CAF_EXTERNAL_PROJECT}
  GIT_REPOSITORY "https://github.com/actor-framework/actor-framework"
  GIT_TAG "master"
  UPDATE_COMMAND ""
  CONFIGURE_COMMAND cd ${CAF_SOURCE_DIR} && ./configure --prefix=${CMAKE_CURRENT_BINARY_DIR}
  BUILD_COMMAND cd ${CAF_SOURCE_DIR} && make
  INSTALL_COMMAND cd ${CAF_SOURCE_DIR} && make install
  )

set (CAF_EXTERNAL_PROJECT ${CAF_EXTERNAL_PROJECT} PARENT_SCOPE)
set (CAF_LIBRARY_NAME ${CMAKE_SHARED_LIBRARY_PREFIX}caf${CMAKE_SHARED_LIBRARY_SUFFIX})
set (CAF_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include PARENT_SCOPE)
set (CAF_LIBRARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/lib PARENT_SCOPE)
file (GLOB CAF_LIBRARIES RELATIVE ${CMAKE_CURRENT_BINARY_DIR} lib/*)

add_library (caf SHARED IMPORTED)
set_target_properties(caf PROPERTIES IMPORTED_LOCATION ${CAF_LIBRARY_DIR}/${CAF_LIBRARY_NAME})
